# python-design-patterns-data-science

./: .gitignore  README.md  pyproject.toml
pythonProject/factory/: 01_Loaders.ipynb
